# django-azure-communication-email

./: .editorconfig  README.md  pyproject.toml  runtests.py  tox.ini
.github/workflows/: cd.yml  ci.yml
django_ace/: __init__.py  attachment.py  backend.py  utils.py
django_azure_communication_email/: backend.py  settings.py
django_better_azure_communication_email/: attachment.py  backend.py
tests/: test_attachment.py  test_backend.py  test_settings.py  test_utils.py
