[tool.poetry]
name = "django-azure-communication-email"
version = "1.4.0"
description = "A Django email backend for Azure Communication Email service."
authors = ["Dmitrii Azarenko <dmitrii.azarenko@symphonyai.com>"]
maintainers = []
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/retech-us/django-azure-communication-email"
packages = [{include = "django_azure_communication_email"}]
keywords = ["django", "email", "azure"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Framework :: Django',
    'Framework :: Django :: 2.2',
    'Framework :: Django :: 3.2',
    'Framework :: Django :: 4.0',
    'Framework :: Django :: 4.1',
    'Framework :: Django :: 4.2',
    'Framework :: Django :: 5.0',
    'Framework :: Django :: 5.1',
    'Framework :: Django :: 5.2',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/retech-us/django-azure-communication-email/issues"
"Company Website" = "https://www.symphonyai.com/"


[tool.poetry.dependencies]
python = ">=3.9.2,<3.14"
Django = ">=2.2,<6"
azure-identity = ">=1.15,<2"
azure-communication-email = "^1.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13"
tox = "^4.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 312
default_section = "THIRDPARTY"
known_first_party = ["django_azure_communication_email"]
known_django = "django"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
combine_as_imports = true
sort_reexports = true
multi_line_output = 5
lines_after_imports = 2
combine_star = true
include_trailing_comma = true
remove_redundant_aliases = true
skip_gitignore = true
